--- a/app/assets/stylesheets/bootstrap_and_overrides.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.scss
@@ -1,3 +1,80 @@
 @import "bootstrap";
 body { padding-top: 60px; }
 @import "bootstrap-responsive";
+
+
+#error_explanation
+{
+  color: #b94a48;
+}
+
+.navbar
+{
+  a.brand
+  {
+    background: image-url('voonami_logo.png') left bottom no-repeat;
+    width: 150px;
+    height: 20px;
+  }
+}
+
+hr
+{
+  border: 0;
+  border-top: 1px solid #cacaca;
+  padding: 0;
+}
+
+th a
+{
+  color: black;
+  text-decoration: underline;
+}
+
+th a:hover
+{
+  text-decoration: none;
+}
+
+th .current
+{
+  padding-right: 12px;
+  background-repeat: no-repeat;
+  background-position: right center;
+}
+
+.show
+{
+  h3
+  {
+    padding: 5px 0;
+    margin: 0;
+  }
+  hr
+  {
+    padding: 0;
+    margin: 0;
+  }
+  .information
+  {
+    font-size: 12px;
+    color: gray;
+    padding: 0;
+    margin: 0;
+  }
+  p
+  {
+    padding:15px 0;
+    margin: 0;
+  }
+}
+
+.btn a
+{
+  color: black;
+}
+
+.search-form-offset
+{
+  margin: 15px 0 0 0;
+}
