--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -1,21 +1,30 @@
-<%= link_to "Home", root_path, :class => 'brand' %>
-<ul class="nav">
-  <% if user_signed_in? %>
-    <li>
-    <%= link_to('Logout', destroy_user_session_path, :method=>'delete') %>
-    </li>
-  <% else %>
-    <li>
-    <%= link_to('Login', new_user_session_path)  %>
-    </li>
-  <% end %>
-  <% if user_signed_in? %>
-    <li>
-    <%= link_to('Edit account', edit_user_registration_path) %>
-    </li>
-  <% else %>
-    <li>
-    <%= link_to('Sign up', new_user_registration_path)  %>
-    </li>
-  <% end %>
-</ul>
+<header class="navbar navbar-fixed-top">
+  <nav class="navbar-inner">
+    <div class="container">
+      <%= link_to "Home", root_path, :class => 'brand' %>
+      <ul class="nav">
+        <% if user_signed_in? %>
+          <li>
+        <%= link_to('Visits', new_visit_path)  %>
+        </li>
+        <li>
+        <%= link_to('Logout', destroy_user_session_path, :method=>'delete') %>
+        </li>
+      <% else %>
+          <li>
+        <%= link_to('Login', new_user_session_path)  %>
+        </li>
+      <% end %>
+        <% if user_signed_in? %>
+          <li>
+        <%= link_to('Edit account', edit_user_registration_path) %>
+        </li>
+      <% else %>
+          <li>
+        <%= link_to('Sign up', new_user_registration_path)  %>
+        </li>
+      <% end %>
+      </ul>
+    </div>
+  </nav>
+</header>
