configured nested form

--- a/app/views/visits/show.html.erb
+++ b/app/views/visits/show.html.erb
@@ -1,9 +1,6 @@
-<% content_for :company do %>
-  <%= @visit.company %>
+<% content_for :title do %>
+ Visit 
 <% end %>
-
-<p id="notice"><%= notice %></p>
-
 <p>
   <strong>Company:</strong>
   <%= @visit.company %>
