--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -1,11 +1,14 @@
 <header class="navbar navbar-fixed-top">
   <nav class="navbar-inner">
     <div class="container">
-      <%= link_to "Home", root_path, :class => 'brand' %>
+      <%= link_to "Voonami", root_path, :class => 'brand' %>
       <ul class="nav">
         <% if user_signed_in? %>
           <li>
         <%= link_to('Visits', new_visit_path)  %>
+        </li>
+          <li>
+        <%= link_to('Visitors', new_visitor_path)  %>
         </li>
         <li>
         <%= link_to('Logout', destroy_user_session_path, :method=>'delete') %>
