--- a/app/views/visits/_form.html.erb
+++ b/app/views/visits/_form.html.erb
@@ -1,4 +1,4 @@
-<%= simple_form_for(@visit, html: { class: 'form-horizontal' }) do |f| %>
+<%= simple_nested_form_for(@visit, html: { class: 'form-horizontal' }) do |f| %>
   <% if @visit.errors.any? %>
     <div id="error_explanation">
       <h4><%= pluralize(@visit.errors.count, "error") %> prohibited this visit from being saved:</h4>
@@ -10,7 +10,16 @@
       </ul> -->
     </div>
   <% end %>
-
+  <div id="visitors">
+  <% f.fields_for :visitors do |visitor| %>
+    <tr class="fields">
+    <%= visitor.label :content, "Visitor Name" %><br />
+    <%= visitor.text_field :vname %>
+    <%= visitor.link_to_remove "Remove Visitor" %>
+    </tr>
+  </div>
+  <% end %>
+  <p><%= f.link_to_add "Add Visitor", :visitors, :data => { :target => "#visitors" } %></p> 
     <%= f.input :company %>
     <%= f.input :phone %>
     <%= f.input :email %>
