--- a/app/views/visits/new.html.erb
+++ b/app/views/visits/new.html.erb
@@ -1,5 +1,11 @@
+<% content_for :title do %>
+  New Visit
+<% end %>
+
 <h3>New Visit</h3>
 
 <%= render 'form' %>
 
 <%= link_to 'Back', visits_path %>
+
+
