styling and code review changes

--- a/app/views/visitors/index.html.erb
+++ b/app/views/visitors/index.html.erb
@@ -1,4 +1,8 @@
-<h3>Visitors</h3>
+<% content_for :title do %>
+  Voonami-Visitor/Visit log
+<% end %>
+
+<h3>Visitors/Visit Log</h3>
 
 <table class="table table-striped">
   <thead>
