--- a/app/views/visitors/_form.html.erb
+++ b/app/views/visitors/_form.html.erb
@@ -1,11 +1,17 @@
-<%= simple_form_for(@visitor) do |f| %>
-  <%= f.error_notification %>
+<%= simple_form_for(@visitor, html: { class: 'form-horizontal' }) do |f| %>
+  <% if @visitor.errors.any? %>
+    <div id="error_explanation">
+      <h4><%= pluralize(@visitor.errors.count, "error") %> prohibited this visit from being saved:</h4>
+      <!--
+      <ul>
+      <%  @visitor.errors.full_messages.each do |msg| %>
+        <li><%= msg %></li>
+      <% end %>
+      </ul> -->
+    </div>
+  <% end %>
 
-  <div class="form-inputs">
     <%= f.input :vname %>
-  </div>
 
-  <div class="form-actions">
     <%= f.button :submit %>
-  </div>
 <% end %>
