--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -2,32 +2,23 @@
   <nav class="navbar-inner">
     <div class="container">
       <%= link_to "Voonami", root_path, :class => 'brand' %>
-      <ul class="nav">
-        <% if user_signed_in? %>
-          <li>
-        <%= link_to('Visits', new_visit_path)  %>
-        </li>
-          <li>
-        <%= link_to('Visitors', new_visitor_path)  %>
-        </li>
-        <li>
-        <%= link_to('Logout', destroy_user_session_path, :method=>'delete') %>
-        </li>
-      <% else %>
-          <li>
-        <%= link_to('Login', new_user_session_path)  %>
-        </li>
-      <% end %>
-        <% if user_signed_in? %>
-          <li>
-        <%= link_to('Edit account', edit_user_registration_path) %>
-        </li>
-      <% else %>
-          <li>
-        <%= link_to('Sign up', new_user_registration_path)  %>
-        </li>
-      <% end %>
+      <% if user_signed_in? %>
+        <ul class="nav navbar-nav">
+        <li><%= link_to('Visits', visits_path)  %></li>
+        <li><%= link_to('Visitors', visitors_path)  %></li>
       </ul>
-    </div>
-  </nav>
-</header>
+      <ul class="nav" style="float: right;">
+        <li class="dropdown">
+        <a href="#" class="dropdown-toggle" data-toggle="dropdown"><%= current_user_name %> <b class="caret"></b></a>
+        <ul class="dropdown-menu">
+          <li><%= link_to('Logout', destroy_user_session_path, :method=>'delete') %></li>
+          <li><%= link_to('Edit Account', edit_user_registration_path) %></li>
+        </ul>
+      <% else %>
+          <ul class="nav" style="float: right;">
+          <li><%= link_to('Login', new_user_session_path)  %></li>
+        <% end %>
+        </ul>
+      </div>
+    </nav>
+  </header>
